# Okay-Garmin

./: .gitignore  README.md  build.bat  main.py  pyproject.toml  requirements.txt  update.py
web/: index.html  script.js  style.css
