[project]
name = "okay-garmin"
version = "1.3.0"
description = "A Python Programm that uses a Voice Activation."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Vensin", email = "vxnsin@icloud.com" },
]
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
    "pyinstaller>=6.19.0",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
    "pywebview>=6.1",
    "pywin32>=311",
    "requests>=2.32.5",
    "setuptools>=82.0.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.14.5",
    "winotify>=1.1.0",
]
